<resources>
    <string name="app_name">Rirakkusu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome!</string>
    <string name="feeling">feeling</string>
    <string name="time">Time</string>

    <string name="default_time">5</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="start">Start</string>
    <string name="surprised">Surprised</string>
    <string name="loved">Loved</string>
    <string name="intrested">Intrested</string>
    <string name="happy">Happy</string>
    <string name="angery">Angery</string>
    <string name="bored">Bored</string>
    <string name="sad">Sad</string>
    <string name="amazed">Amazed</string>
    <string name="anxious">Anxious</string>

    <string name="title_activity_meditation">MeditationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"Sit comfortably or lay down \n Keep your back straight \n Relax your muscles \n  De-focus your eyes, Breath In \n Breath Out while closing your eyes. "</string>
    <string name="end_sesion">End Sesion</string>
    <string name="preferences">Preferences</string>
    <string name="user_name_key">user_name</string>
    <string name="user_name_title">User Name</string>
    <string name="user_name_summary">Enter your name for improved user experience.</string>
    <string name="save_data_key">save_data</string>
    <string name="save_data_summary">This will save your emotions and date helping you keep track of your daily emotional state. Display History should be enabled to view them.</string>
    <string name="Save_data_title">Save History</string>
    <string name="about_text">Life is full of stress and anxiety. This app will help you manage anxiety, stress, and depression. \nMeditation helps with falling asleep and sharpens your memory.  \n \n \nFor more details on how to meditate properly, read this article published by mindful.org. \n https://www.mindful.org/how-to-meditate/</string>
    <string name="reminder_preference">reminder_preference</string>
    <string name="save_data">save_data</string>
    <string name="display_history">display_history</string>
    <string name="display_history_title">Display History</string>
    <string name="display_history_summary">"Enable this to display your history on the Help Page "</string>
    <string name="diplay_histor_summary">Enable this to view previous session history. This will be diplayed in the History Page</string>
</resources>
