<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:layout_width="match_parent"
        android:key="@string/user_name_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/user_name_summary"
        android:title="@string/user_name_title" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/save_data"
        android:summary="@string/save_data_summary"
        android:title="@string/Save_data_title" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/display_history"
        android:summary="@string/display_history_summary"
        android:title="@string/display_history_title" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/reminder_preference"
        android:summary="This enable daily reminder"
        android:title="Reminder" />

</PreferenceScreen>