<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|center_horizontal"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle">

        <CheckBox
            android:id="@+id/feeling1"
            android:layout_width="100dp"
            android:layout_height="80dp"

            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:fadingEdge="vertical"
            android:focusable="true"
            android:text="@string/happy"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/feeling6"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sad"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/feeling5"
            app:layout_constraintTop_toBottomOf="@+id/feeling3" />

        <CheckBox
            android:id="@+id/feeling3"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/angery"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/feeling2"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/feeling2"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/surprised"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/feeling1"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/feeling9"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/anxious"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/feeling8"
            app:layout_constraintTop_toBottomOf="@+id/feeling6" />

        <CheckBox
            android:id="@+id/feeling7"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/loved"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feeling4" />

        <CheckBox
            android:id="@+id/feeling8"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/amazed"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/feeling7"
            app:layout_constraintTop_toBottomOf="@+id/feeling5" />

        <CheckBox
            android:id="@+id/feeling5"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/bored"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/feeling4"
            app:layout_constraintTop_toBottomOf="@+id/feeling2" />

        <CheckBox
            android:id="@+id/feeling4"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/intrested"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feeling1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/percentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight=".25"
            android:hint="@string/time"
            android:textColorHint="#BC000000"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/default_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#070707"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:thumb="@drawable/thumb"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1.5"
            android:max="30"
            android:min="1"
            android:progress="5" />

    </LinearLayout>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="16dp"
        android:background="#0083B0"
        android:textColor="@android:color/white"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentlayout" />

</androidx.constraintlayout.widget.ConstraintLayout>